# DiscProjAgilDevUFG

./: .gitignore  README.md  exemplo1_instagram.json  exemplo44_instagram.json  exemplo5_instagram.json  instagram_scraper_completo.py  main.py  pyproject.toml  resultado_scraping.json  trends_report.json
agents-browser-use/: extrator-trends.py  extrator-use.py  teste-api.py  teste-browser.py
agents-crew/: escola-pos.py  google_trends.py  scrapeWeb.py
classificator/: bert_classificator.py  bert_teste.py
extrator/: scraper_instagram.py  scraper_print.py
extrator_instagram/: instagram_analise_20251202_091945.json  instagram_analise_20251202_092052.json  instagram_analise_20251202_092323.json  instagram_multiplos.json  instagram_scraper_completo.py  resultado_instagram_pix.json  texto_bruto_20251202_084942_pix.json  texto_bruto_20251202_091449.json  texto_bruto_20251202_092000.json  texto_bruto_20251202_092106.json
interpretador_tela/: copia_texto.py  instagram_analyzer.py  instagram_scraper_completo.py  qwen2.py  qwen_image_to_text.py  resultado_instagram.json  texto_copiado.txt
